--- a/calendarview/src/main/res/values/attrs.xml
+++ b/calendarview/src/main/res/values/attrs.xml
@@ -56,8 +56,8 @@
         </attr>
 
         <!--<attr name="select_mode">-->
-            <!--<enum name="default_mode" value="0"/>-->
-            <!--<enum name="single_mode" value="1"/>-->
+        <!--<enum name="default_mode" value="0"/>-->
+        <!--<enum name="single_mode" value="1"/>-->
         <!--</attr>-->
     </declare-styleable>
 
@@ -78,5 +78,17 @@
         <attr name="calendar_content_view_id" format="integer" />
     </declare-styleable>
 
+    <!--GroupRecyclerView-->
+    <declare-styleable name="GroupRecyclerView">
+        <attr name="group_height" format="dimension" />
+        <attr name="group_child_offset" format="dimension" />
+        <attr name="group_background" format="color" />
+        <attr name="group_text_color" format="color" />
+        <attr name="group_text_size" format="dimension" />
+        <attr name="group_center" format="boolean" />
+        <attr name="group_padding_left" format="dimension" />
+        <attr name="group_padding_right" format="dimension" />
+        <attr name="group_has_header" format="boolean" />
+    </declare-styleable>
 
 </resources>
