--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="line_color">#e7e7e7</color>
     <color name="content_background">#f2f2f2</color>
     <color name="solar_background">#009988</color>
+
+    <color name="cEDEDED">#EDEDED</color>
+    <color name="cFF323232">#FF323232</color>
+    <color name="c656565">#656565</color>
+
 </resources>
